add_library(Canard
        libcanard/libcanard/canard.h libcanard/libcanard/canard.c
        libcanard/libcanard/cavl.h)

target_include_directories(Canard PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libcanard/libcanard/)

add_library(O1Heap
        o1heap/o1heap/o1heap.h o1heap/o1heap/o1heap.c)

target_include_directories(Canard PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/o1heap/o1heap)

add_library(Cyphal_DSDL
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/translation/Linear_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/translation/LinearTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/rotation/PlanarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/rotation/Planar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/acoustics/Note_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/thermodynamics/PressureTempVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/time/TAI64Var_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/time/TAI64_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/time/TAI64VarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/StateVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/PointStateVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/PointState_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/TwistVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/Pose_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/State_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/StateVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/PointVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/TwistVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/Twist_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/Point_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/PoseVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/PointStateVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian/PoseVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/StateVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/PointStateVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/PointState_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/Pose_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/State_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/StateVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/PointVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/Point_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/PoseVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic/PointStateVar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation/Velocity1VarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation/Linear_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation/LinearTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation/LinearVarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation/Velocity3Var_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation/Velocity3Var_0_2.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/rotation/PlanarTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/rotation/Planar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity/Source_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity/PowerTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity/Power_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity/SourceTs_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/physics/optics/HighColor_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/common/Readiness_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/common/Heartbeat_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/sensor/Status_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/esc/_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/servo/_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/Status_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/Feedback_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/FaultFlags_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/Vector8_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/Scalar_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/Vector3_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/Vector31_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/Vector2_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/Vector4_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp/Vector6_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/battery/_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/battery/Technology_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/battery/Error_0_1.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/battery/Status_0_2.h
        cyphal_public_regulated_data_types_compiled/reg/udral/service/battery/Parameters_0_3.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Write_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Path_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/GetInfo_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Path_2_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Read_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/GetInfo_0_2.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Modify_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/List_0_2.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Error_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Modify_1_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Write_1_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/Read_1_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/file/List_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/diagnostic/Record_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/diagnostic/Record_1_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/diagnostic/Severity_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/String_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/Empty_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/Unstructured_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Integer64_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Natural32_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Integer8_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Natural8_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Natural16_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Real64_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Bit_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Integer16_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Integer32_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Natural64_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Real16_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/Real32_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Integer64_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Natural32_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Integer8_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Natural8_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Natural16_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Real64_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Bit_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Integer16_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Integer32_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Natural64_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Real16_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/Real32_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/time/TAIInfo_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/time/SynchronizedTimestamp_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/time/GetSynchronizationMasterInfo_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/time/Synchronization_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/time/TimeSystem_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/internet/udp/HandleIncomingPacket_0_2.h
        cyphal_public_regulated_data_types_compiled/uavcan/internet/udp/HandleIncomingPacket_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/internet/udp/OutgoingPacket_0_2.h
        cyphal_public_regulated_data_types_compiled/uavcan/internet/udp/OutgoingPacket_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/power/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/electric_current/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/acceleration/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/acceleration/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/mass/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/voltage/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/magnetic_field_strength/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/magnetic_field_strength/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/frequency/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angle/Quaternion_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angle/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/energy/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/volumetric_flow_rate/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length/WideVector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length/WideScalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/velocity/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/velocity/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_velocity/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_velocity/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/pressure/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/torque/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/torque/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/force/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/force/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/temperature/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/duration/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/duration/WideScalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_acceleration/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_acceleration/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/volume/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/unit/electric_charge/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/power/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/electric_current/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/acceleration/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/acceleration/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/mass/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/voltage/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/magnetic_field_strength/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/magnetic_field_strength/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/frequency/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angle/Quaternion_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angle/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/energy/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/volumetric_flow_rate/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length/WideVector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length/WideScalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/velocity/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/velocity/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_velocity/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_velocity/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/pressure/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/torque/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/torque/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/force/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/force/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/temperature/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/duration/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/duration/WideScalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_acceleration/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_acceleration/Vector3_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/volume/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/si/sample/electric_charge/Scalar_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/ArbitrationID_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/DataFD_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/ExtendedArbitrationID_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/RTR_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/BaseArbitrationID_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/Error_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/DataClassic_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/Manifestation_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/Frame_0_2.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/Frame_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/udp/Endpoint_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/udp/Frame_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/ethernet/EtherType_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/ethernet/Frame_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/serial/Fragment_0_2.h
        cyphal_public_regulated_data_types_compiled/uavcan/metatransport/serial/Fragment_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/ExecuteCommand_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/IOStatistics_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/Health_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/ID_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/Heartbeat_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/ExecuteCommand_1_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/GetInfo_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/Mode_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/Version_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/GetTransportStatistics_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/port/ServiceID_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/port/SubjectID_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/port/ServiceIDList_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/port/ID_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/port/List_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/node/port/SubjectIDList_0_1.h
        cyphal_public_regulated_data_types_compiled/uavcan/pnp/NodeIDAllocationData_2_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/pnp/NodeIDAllocationData_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster/AppendEntries_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster/Discovery_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster/Entry_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster/RequestVote_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/_register/Name_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/_register/List_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/_register/Access_1_0.h
        cyphal_public_regulated_data_types_compiled/uavcan/_register/Value_1_0.h
        cyphal_public_regulated_data_types_compiled/nunavut/support/serialization.h)

target_include_directories(Cyphal_DSDL PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/rotation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/dynamics/rotation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/acoustics
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/thermodynamics
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/cartesian
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/geodetic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/translation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/rotation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/kinematics/rotation
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/physics/optics
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/common
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/common
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/sensor
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/esc
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/servo
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/actuator/common/sp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/battery
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/battery
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/battery
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/battery
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/reg/udral/service/battery
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/file
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/diagnostic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/diagnostic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/diagnostic
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/time
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/internet/udp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/internet/udp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/internet/udp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/internet/udp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/power
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/electric_current
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/mass
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/voltage
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/magnetic_field_strength
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/magnetic_field_strength
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/frequency
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angle
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angle
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/energy
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/volumetric_flow_rate
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/pressure
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/torque
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/torque
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/force
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/force
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/temperature
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/duration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/duration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/angular_acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/volume
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/unit/electric_charge
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/power
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/electric_current
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/mass
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/voltage
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/magnetic_field_strength
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/magnetic_field_strength
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/frequency
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angle
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angle
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/energy
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/volumetric_flow_rate
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/length
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_velocity
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/pressure
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/torque
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/torque
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/force
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/force
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/temperature
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/duration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/duration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_acceleration
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/volume
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/electric_charge
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/udp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/udp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/ethernet
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/ethernet
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/serial
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/serial
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node/port
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node/port
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node/port
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node/port
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node/port
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/node/port
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/pnp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/pnp
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/_register
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/_register
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/_register
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/uavcan/_register
        ${CMAKE_CURRENT_SOURCE_DIR}/cyphal_public_regulated_data_types_compiled/nunavut/support)

set_target_properties(Cyphal_DSDL PROPERTIES LINKER_LANGUAGE C)